tests/ui/diagnostic_namespace/on_unimplemented/report_warning_on_duplicated_options.stderr
warning: `message` is ignored due to previous definition of `message`
  --> $DIR/report_warning_on_duplicated_options.rs:8:5
   |
LL |     message = "first message",
   |     ------------------------- `message` is first declared here
...
LL |     message = "second message",
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `message` is later redundantly declared here
   |
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: `label` is ignored due to previous definition of `label`
  --> $DIR/report_warning_on_duplicated_options.rs:10:5
   |
LL |     label = "first label",
   |     --------------------- `label` is first declared here
...
LL |     label = "second label",
   |     ^^^^^^^^^^^^^^^^^^^^^^ `label` is later redundantly declared here

error[E0277]: first message
  --> $DIR/report_warning_on_duplicated_options.rs:20:15
   |
LL |     takes_foo(());
   |     --------- ^^ first label
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Foo` is not implemented for `()`
   = note: custom note
   = note: second note
help: this trait has no implementations, consider adding one
  --> $DIR/report_warning_on_duplicated_options.rs:14:1
   |
LL | trait Foo {}
   | ^^^^^^^^^
note: required by a bound in `takes_foo`
  --> $DIR/report_warning_on_duplicated_options.rs:17:22
   |
LL | fn takes_foo(_: impl Foo) {}
   |                      ^^^ required by this bound in `takes_foo`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.
